part3/3_3/manifests/deployment-todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-application
  name: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
  template:
    metadata:
      labels:
        app: todolist
    spec:
      containers:
        - name: todolist
          image: FRONT_IMAGE
